samples/_failures_safe/1761458827_61b272_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3df2cf8.c: In function ‘main’:
./samples/SAFE/__tmp_e3df2cf8.c:156:17: error: expected expression at end of input
  156 |                 if (matrix_add(&mat1,
      |                 ^~
./samples/SAFE/__tmp_e3df2cf8.c:156:21: error: too few arguments to function ‘matrix_add’
  156 |                 if (matrix_add(&mat1,
      |                     ^~~~~~~~~~
./samples/SAFE/__tmp_e3df2cf8.c:93:5: note: declared here
   93 | int matrix_add(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_e3df2cf8.c:156:17: error: expected declaration or statement at end of input
  156 |                 if (matrix_add(&mat1,
      |                 ^~
./samples/SAFE/__tmp_e3df2cf8.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e3df2cf8.c:156:17: error: expected declaration or statement at end of input
